force-app/main/default/objects/Integration_Doc_Setting__mdt/Integration_Doc_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Integration API Documentation PDF generation. Controls watermark text, company logo, company name, and header color displayed in the generated PDF documents.</description>
    <label>Integration Doc Setting</label>
    <pluralLabel>Integration Doc Settings</pluralLabel>
</CustomObject>