force-app/main/default/objects/Integration_Doc_Setting__mdt/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Company name displayed in the document header.</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>