force-app/main/default/objects/Integration_Doc_Setting__mdt/fields/Header_Color__c.field-meta.xml
<CustomField>
    <fullName>Header_Color__c</fullName>
    <description>Hex color code for the document header and section headings. E.g. #0070d2, #8B4513. Defaults to #1B2A4A if blank.</description>
    <label>Header Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>