force-app/main/default/objects/Integration_Doc_Setting__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only the first active record is used for PDF generation settings.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>