force-app/main/default/objects/Integration_Doc_Setting__mdt/fields/Logo_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Logo_Document_Id__c</fullName>
    <description>Logo source for the PDF header. Accepts: ContentDocument ID (069...), ContentVersion ID (068...), classic Document ID (015...), Attachment ID, Static Resource name, or file Title. The logo appears in the top-right corner of the PDF header.</description>
    <inlineHelpText>Easiest option: Create a Static Resource (Setup &gt; Static Resources &gt; New) with your logo image, then enter the Static Resource Name here (e.g. CompanyLogo). OR: Upload to Salesforce Files and enter the ContentDocument ID (069...) from the URL. Formats: PNG, JPG, GIF.</inlineHelpText>
    <label>Logo Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>