force-app/main/default/objects/Integration_Doc_Setting__mdt/fields/Watermark_Text__c.field-meta.xml
<CustomField>
    <fullName>Watermark_Text__c</fullName>
    <description>Diagonal watermark text displayed on the PDF document. E.g. CONFIDENTIAL, DRAFT, INTERNAL. Leave blank for no watermark.</description>
    <label>Watermark Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>